syntax = "proto3";

package io.github.fierg;

option java_multiple_files = true;

service GameServer {
  rpc solve (GameStringRequest) returns (GameStringReply) {}
}

message GameStringRequest {
  string payload = 1;
}

message GameStringReply {
  string payload = 1;
}